--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8",
+        "phpunit/phpunit": "8",
         "squizlabs/php_codesniffer": "^3",
         "flyeralarm/php-code-validator": "^2.2",
         "vimeo/psalm": "^3.4",
